EES-6881 Fix overflow issue for key stat tiles (#6683)
`overflow-wrap: break-word;` wasn't having any effect for long stats.
Min-width was behaving as 'auto' by default so the tile didn't shrink
(always respected min content width); setting it to `0` removes this
auto-sizing layout logic.

--- a/src/explore-education-statistics-common/src/modules/find-statistics/components/KeyStatTile.module.scss
+++ b/src/explore-education-statistics-common/src/modules/find-statistics/components/KeyStatTile.module.scss
@@ -8,6 +8,7 @@
   justify-content: space-evenly;
   overflow-wrap: break-word;
   padding: 0.7rem 1rem;
+  min-width: 0;
 
   @include govuk-media-query($until: tablet) {
     flex-basis: auto;
